--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,8 +7,20 @@
 .encabezadoHeader {
   color: yellow;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 60px; }
+  font-family: 'Russo One', sans-serif;
+  font-size: 60px;
+  margin-top: 50px; }
+
+.cuadrado {
+  padding: 50px;
+  margin: 10px;
+  background-color: #0000FF;
+  border: solid 1px blue;
+  color: white;
+  background: linear-gradient(120deg, blue 40%, cyan);
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
 
 .header__centerposition {
   text-align: center; }
@@ -16,6 +28,11 @@
 .header__logo {
   width: 500px;
   height: 300px; }
+
+.redes_icons--header {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px; }
 
 .animacion-h1 {
   animation-name: flash;
@@ -32,8 +49,10 @@
     opacity: 1; } }
 
 .esqudoLogo {
-  width: 500px;
-  height: 300px; }
+  width: 200px;
+  height: 180px;
+  margin-right: 40px;
+  border-radius: 5%; }
 
 .body__background {
   background-color: yellow; }
@@ -49,6 +68,15 @@
   letter-spacing: 1px;
   background-color: yellow; }
 
+.navbar_redes--header {
+  display: flex;
+  justify-content: space-around; }
+
+.redes_links--header {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-between; }
+
 .footer_navegador {
   display: inline;
   justify-content: start;
@@ -61,6 +89,12 @@
 
 .main__centerposition {
   text-align: center; }
+
+.mainpicture--index {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center; }
 
 .h2Slogan {
   text-align: center;
@@ -95,7 +129,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  padding-top: 70px; }
 
 .h2Servicios {
   text-align: center;
@@ -110,6 +145,14 @@
   border-color: blue;
   border-width: 2px;
   border-radius: 8%; }
+
+.cuadrado--servicios {
+  padding: 10px;
+  margin: 2px;
+  background-color: #0000FF;
+  border: solid 1px blue;
+  color: white;
+  background: linear-gradient(120deg, blue 40%, cyan); }
 
 #somosEsqudo {
   color: #3131ad;
@@ -401,3 +444,22 @@
   background-color: red;
   margin: 6px;
   padding: 6px; }
+
+.h3servicios--styles {
+  font-family: 'Anton', sans-serif;
+  font-size: 50px;
+  font-weight: 200;
+  color: white;
+  margin-top: 90px; }
+
+.h4_5_6servicios--styles {
+  font-family: 'Anton', sans-serif;
+  font-size: 40px;
+  font-weight: 200;
+  color: yellow;
+  margin-top: 60px; }
+
+.texth4_5_6--styles {
+  font-family: 'Indie Flower' , cursive;
+  font-size: 25px;
+  color: white; }
