--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -9,9 +9,24 @@
 {
 color: yellow;
 text-align: center;
-font-family: Arial, Helvetica, sans-serif;
+font-family: 'Russo One', sans-serif;
 font-size: 60px;
+margin-top: 50px;
 }
+
+.cuadrado
+{
+    padding:50px;
+    margin:10px;
+    background-color: #0000FF;
+    border: solid 1px blue;
+    color: white;
+    background: linear-gradient(120deg, blue 40%, cyan);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    }
+
 
 .header__centerposition
 {
@@ -22,6 +37,13 @@ font-size: 60px;
 {
     width: 500px;
     height: 300px;
+}
+
+.redes_icons--header{
+
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
 }
 
 
@@ -50,8 +72,10 @@ opacity: 1;
 
 .esqudoLogo
 {
-    width: 500px;
-    height: 300px;
+    width: 200px;
+    height: 180px;
+    margin-right: 40px;
+    border-radius: 5%;
 }
 
 .body__background
@@ -70,6 +94,18 @@ font-size: 26px;
 font-family: Arial, Helvetica, sans-serif;
 letter-spacing: 1px;
 background-color: yellow;
+}
+
+.navbar_redes--header{
+    display: flex;
+    justify-content:space-around;
+}
+
+.redes_links--header
+{
+display: flex;
+list-style-type: none;
+justify-content: space-between;
 }
 
 .footer_navegador
@@ -91,6 +127,13 @@ margin: 12px;
 {
     text-align: center;
 }
+
+.mainpicture--index{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    }
 
 .h2Slogan
 {
@@ -136,6 +179,7 @@ margin: 12px;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding-top: 70px;
 }
 
 .h2Servicios
@@ -154,6 +198,16 @@ margin: 12px;
     border-color: blue;
     border-width: 2px;
     border-radius: 8%;
+}
+
+.cuadrado--servicios
+{
+    padding:10px;
+    margin: 2px;
+    background-color: #0000FF;
+    border: solid 1px blue;
+    color: white;
+    background: linear-gradient(120deg, blue 40%, cyan);
 }
 
 #somosEsqudo
@@ -582,4 +636,27 @@ $redes:(
     margin: 6px;
     padding: 6px;
     }
+}
+
+
+.h3servicios--styles{
+    font-family:'Anton', sans-serif;
+    font-size: 50px;
+    font-weight: 200;
+    color: white;
+    margin-top: 90px;
+}
+
+.h4_5_6servicios--styles{
+    font-family: 'Anton', sans-serif;
+    font-size: 40px;
+    font-weight: 200;
+    color: yellow; 
+    margin-top: 60px;
+}
+
+.texth4_5_6--styles{
+    font-family: 'Indie Flower' , cursive;
+    font-size: 25px;
+    color: white;
 }
