--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,13 +108,13 @@
   margin-top: 100px; }
 
 .fotoPrincipal {
-  border-radius: 8%;
+  border-radius: 2%;
   width: 900px;
   height: 800px;
   padding: 10px; }
 
 .carousel-foto-estilo {
-  border-radius: 8%;
+  border-radius: 2%;
   width: 1100px;
   height: 700px; }
 
@@ -182,7 +182,8 @@
 .tableTitle {
   color: blue;
   font-weight: 60px;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center; }
 
 .fontServicios {
   color: blue;
@@ -294,7 +295,7 @@
 #estilos-ventanas {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center; }
 
 .fotosventanas-container-img {
@@ -308,8 +309,8 @@
   margin-bottom: 30px;
   margin-right: 25px;
   padding: 10px;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   object-fit: inherit; }
 
 .fotosventanas-container-img:hover img {
