--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -150,7 +150,7 @@ margin: 12px;
 
 .fotoPrincipal
 {
-    border-radius: 8%;
+    border-radius: 2%;
     width: 900px;
     height: 800px;
     padding: 10px;   
@@ -159,7 +159,7 @@ margin: 12px;
 
 .carousel-foto-estilo
 {
-    border-radius: 8%;
+    border-radius: 2%;
     width: 1100px;
     height: 700px;
 }
@@ -250,6 +250,7 @@ margin: 12px;
     color: blue;
     font-weight: 60px;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 .fontServicios
@@ -416,7 +417,7 @@ margin: 12px;
 {
     display:flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     
 }
@@ -436,8 +437,8 @@ height: 650px;
     margin-bottom: 30px;
     margin-right: 25px;
     padding: 10px;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     object-fit:inherit
 }
 
