--- a/css/estilos.css
+++ b/css/estilos.css
@@ -269,7 +269,8 @@ header label {
   font-weight: 400;
   font-size: 26px;
   padding: 10px;
-  font-family: Arial, Helvetica, sans-serif letter-spacing 1px; }
+  font-family: Arial, Helvetica, sans-serif
+ letter-spacing 1px; }
 
 /* items del menu */
 #menu ul li {
@@ -436,7 +437,7 @@ header label {
     height: 100px; } }
 
 /* Tablet Styles */
-@media (max-width: 768px) {
+@media (max-width:768px) {
   .encabezadoHeader {
     font-size: 40px; }
   .body__background {
@@ -551,35 +552,7 @@ header label {
     justify-content: center;
     align-items: center; } }
 
-/* Desktop Styles */
-@media (max-width: 1024px) {
-  .cuadrado {
-    padding: 50px;
-    margin: 10px;
-    background-color: #0000FF;
-    border: solid 1px blue;
-    color: white;
-    background: linear-gradient(120deg, blue 40%, cyan);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    width: 100%; }
-  #section-servicios {
-    flex-direction: column;
-    justify-content: center; }
-  .esqudoLogo {
-    width: 300px;
-    height: 300px;
-    text-align: center; }
-  #section6 {
-    flex-direction: column;
-    justify-content: center;
-    width: 100px;
-    height: 100px;
-    margin-left: 300px; } }
-
-/* declaracion de mis variables para operaciones*/
+    /* declaracion de mis variables para operaciones*/
 .body__backgroundproducts {
   background-color: blue; }
 
