--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -242,14 +242,14 @@ margin-bottom: 50px;
     background: linear-gradient(120deg, blue 40%, cyan);
 }
 
-.cuadrado--servicios-index
+.cuadrado--servicios--index
 {
-    padding:10px;
-    margin: 2px;
+    margin-top: 200px;
     background-color: #0000FF;
     border: solid 1px blue;
     color: white;
     background: linear-gradient(120deg, blue 40%, cyan);
+    width: 100%;
 }
 
 #somosEsqudo
@@ -585,6 +585,15 @@ height: 650px;
     width: 100%;
     }
 
+.cuadrado--servicios--index
+{
+    margin-top: 200px;
+    background-color: #0000FF;
+    border: solid 1px blue;
+    color: white;
+    background: linear-gradient(120deg, blue 40%, cyan);
+    width: 100%;
+    }
 
 #section-servicios
 {
