--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -534,7 +534,7 @@ height: 650px;
     padding: 10px;
     width: 400px;
     height: 400px;   
-    margin-left: 160px;
+    margin-left: 200px;
     padding: 50px;    
 }
 
@@ -544,8 +544,8 @@ height: 650px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
 }
 
 .fotosbalcones-container-img:hover img{
@@ -750,6 +750,66 @@ margin: 10px;
     margin: 15px
 }
 
+.h2Productos1
+{
+    text-align: left;
+    font-size: 30px;
+    font-weight:400;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}  
+
+.fotosventanas-container-img 
+{
+width: 90%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 400px;
+
+}
+
+.fotosbalcones-container-img 
+{
+width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 300px;
+width: 300px;
+
+}
+
+.fotos-balcones
+{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 20px;
+    width: 300px;
+    height: 300px;   
+    width: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.fotos-ventanas
+{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-right: 25px;
+    padding: 10px;
+    width: 300px;
+    height: 300px;
+    object-fit:inherit
+}
+
 .H2--Somos
 {
     text-align: center;
@@ -770,9 +830,17 @@ margin: 10px;
 .main__principalpicture
 {
     border-radius: 8%;
-    width: 633px;
-    height: 500px;
+    width: 100%;
     background-color: yellow;   
+}
+
+#somosEsqudo
+{
+    width: 100%;
+    color: rgb(49, 49, 173);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 60px;
+    background-image: url(../imagenes/mallasdefondo2.jpg)  
 }
 
 .footer_navegador
@@ -789,6 +857,7 @@ margin-bottom: 30px;
 .esqudoCopyright
 {
     padding: 80px;
+    font-size: 20px;
     
 }
 
@@ -808,7 +877,8 @@ margin-bottom: 30px;
 .redes_links--header {
     display: flex;
     flex-direction: column;
-    justify-content: left;
+    justify-content: center;
+    align-items: center;
     margin-top: 300px;
     margin-left: 0%;
 }
@@ -860,7 +930,8 @@ margin-bottom: 30px;
     display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    width: 100%;
     
 }
 
@@ -870,14 +941,16 @@ margin-bottom: 30px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     
 }
+
 
 }
 
 
 /* declaracion de mis variables para operaciones*/
-$alto: 300px;
+$alto: 200px;
 $margin: 1rem;
 $background: blue;
 
@@ -894,7 +967,7 @@ $background: blue;
     background-color: blue;
     font-family: 'Roboto Slab', serif;
     font-style: italic;
-    font-weight: 700;
+    font-weight: 600;
     font-size: ($alto/3)-10;
     word-spacing: 20px;
     margin-top: 100px;
@@ -985,7 +1058,7 @@ $redes:(
 }
 
 .mainpicture--index{
-    width: 110%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -999,14 +1072,15 @@ $redes:(
     justify-content: center;
     align-items: center;
     padding-top: 40px;
-    width: 110%; 
+    width: 90%; 
 }
 
 .contenedor-p
 {
-    width: 110%;
-    text-align: center;
-    padding: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     border: white;
     border-radius: 5%;
 }
@@ -1024,25 +1098,66 @@ $redes:(
     border: solid 1px blue;
     color: white;
     background: linear-gradient(120deg, blue 40%, cyan);
-    width: 120%;
+    width: 100%;
 }
 
 #section2
 {
-    width: 105%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    margin-left: 4px;
+    font-size: 30px;
 }
 
+.h2Slogan
+{
+    font-weight: 500;
+    font-size:30px;
+    
+}
 
 .h2Servicios
 {
     margin: 20px
 
 }
+
+.fotosventanas-container-img 
+{
+width: 90%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 400px;
+
+}
+
+.fotosbalcones-container-img 
+{
+width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 300px;
+width: 300px;
+
+}
+
+.fotos-ventanas
+{
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    padding: 10px;
+    width: 300px;
+    height: 300px;
+    object-fit:inherit
+}
+
 
 #somosEsqudo
 {   
@@ -1058,8 +1173,7 @@ $redes:(
 .main__principalpicture
 {
     border-radius: 8%;
-    width: 350px;
-    height: 400px;
+    width: 100%;
     background-color: yellow;   
 }
 
@@ -1069,7 +1183,7 @@ $redes:(
     justify-content: center;
     width: 70px;
     height: 70px;
-    margin-left: 130px;
+    margin-left: 70px;
 }
 
 .h2Productos
@@ -1079,18 +1193,47 @@ $redes:(
     background-color: blue;
     font-family: 'Roboto Slab', serif;
     font-style: italic;
-    font-weight: 500;
-    font-size: ($alto/4)-10;
+    font-weight: 400;
+    font-size: ($alto/5)-10;
     word-spacing: 20px;
     margin-top: 100px;
+}
+
+#estilo-ventanas
+{
+    text-align: center;   
 }
 
 #estilo-balcones
 {
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items: center;   
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+        
+}
+
+.redes_links--header {
+    margin-top: 350px;
+    margin-bottom: 50px;
+    margin-left: 0%;
+}
+
+.esqudoCopyright
+{
+    padding: 80px;
+    font-size: 20px;
+    
+}
+
+#section3{
+    display: none;
+    
+}
+
+.fontSomos{
+    margin-top: 0px;
 }
 
 }
